Attempted to fix vertical line alignment

--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -26,7 +26,6 @@
     background: #898989;
     display: inline-block;
     opacity: 0.7;
-    margin: auto;
   }
 
   .line-up {
